[project] replacing more custom `Path` extensions with stdlib/JRE calls
GitOrigin-RevId: ee0ef4c4273d9aa73314d77bf9697f6b656fe8fc