@@ -28,6 +28,7 @@ import com.intellij.openapi.util.Couple;
 import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.NioFiles;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
@@ -39,7 +40,6 @@ import com.intellij.testFramework.UsefulTestCase;
 import com.intellij.util.PathUtil;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.io.PathKt;
 import com.intellij.util.lang.JavaVersion;
 import org.gradle.StartParameter;
 import org.gradle.initialization.BuildLayoutParameters;
@@ -74,11 +74,11 @@ import org.junit.runners.Parameterized;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
+import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.zip.ZipException;
@@ -170,24 +170,31 @@ public abstract class GradleImportingTestCase extends JavaExternalSystemImportin
   private void cleanScriptsCacheIfNeeded() {
     if (SystemInfo.isWindows && isGradleOlderThan("3.5")) {
       String serviceDirectory = GradleSettings.getInstance(myProject).getServiceDirectoryPath();
-      File gradleUserHome = serviceDirectory != null ? new File(serviceDirectory) : new BuildLayoutParameters().getGradleUserHomeDir();
-      Path cacheFile = Paths.get(gradleUserHome.getPath(), "caches", "jars-1", "cache.properties");
+      Path gradleUserHome = serviceDirectory != null ? Path.of(serviceDirectory) : new BuildLayoutParameters().getGradleUserHomeDir().toPath();
+      Path cacheFile = gradleUserHome.resolve("caches/jars-1/cache.properties");
       if (Files.notExists(cacheFile)) {
-        PathKt.createFile(cacheFile);
+        try {
+          Files.createFile(NioFiles.createParentDirectories(cacheFile));
+        }
+        catch (IOException e) {
+          throw new UncheckedIOException(e);
+        }
       }
-      File scriptsCacheFolder = Paths.get(gradleUserHome.getPath(), "caches", gradleVersion, "scripts").toFile();
-      if (FileUtil.delete(scriptsCacheFolder)) {
-        LOG.debug("Gradle scripts cache folder has been successfully removed at " + scriptsCacheFolder.getPath());
+      Path scriptsCacheFolder = gradleUserHome.resolve("caches").resolve(gradleVersion).resolve("scripts");
+      try {
+        NioFiles.deleteRecursively(scriptsCacheFolder);
+        LOG.debug("Gradle scripts cache folder has been successfully removed at " + scriptsCacheFolder);
       }
-      else {
-        LOG.debug("Gradle scripts cache folder has not been removed at " + scriptsCacheFolder.getPath());
+      catch (IOException e) {
+        LOG.debug("Gradle scripts cache folder has not been removed at " + scriptsCacheFolder);
       }
-      File scriptsRemappedCacheFolder = Paths.get(gradleUserHome.getPath(), "caches", gradleVersion, "scripts-remapped").toFile();
-      if (FileUtil.delete(scriptsRemappedCacheFolder)) {
-        LOG.debug("Gradle scripts-remapped cache folder has been successfully removed at " + scriptsRemappedCacheFolder.getPath());
+      Path scriptsRemappedCacheFolder = gradleUserHome.resolve("caches").resolve(gradleVersion).resolve("scripts-remapped");
+      try {
+        NioFiles.deleteRecursively(scriptsRemappedCacheFolder);
+        LOG.debug("Gradle scripts-remapped cache folder has been successfully removed at " + scriptsRemappedCacheFolder);
       }
-      else {
-        LOG.debug("Gradle scripts-remapped cache folder has not been removed at " + scriptsRemappedCacheFolder.getPath());
+      catch (IOException e) {
+        LOG.debug("Gradle scripts-remapped cache folder has not been removed at " + scriptsRemappedCacheFolder);
       }
     }
   }
@@ -520,14 +527,15 @@ public abstract class GradleImportingTestCase extends JavaExternalSystemImportin
     File zip = localDistribution.getZipFile();
     try {
       if (zip.exists()) {
-        ZipFile zipFile = new ZipFile(zip);
-        zipFile.close();
+        try {
+          new ZipFile(zip).close();
+        }
+        catch (ZipException e) {
+          e.printStackTrace();
+          System.out.println("Corrupted file will be removed: " + zip);
+          Files.delete(zip.toPath());
+        }
       }
-    }
-    catch (ZipException e) {
-      e.printStackTrace();
-      System.out.println("Corrupted file will be removed: " + zip.getPath());
-      FileUtil.delete(zip);
     }
     catch (IOException e) {
       e.printStackTrace();
